--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <span class="right-icon"></span>
                 <div class="items">
                     <a href="#" data-value="svm" style="--i:1;"><span></span>Support Vector Machines (SVM)</a>
-                    <a href="#" data-value="naive_bayes" style="--i:6;"><span></span>Naive Bayes</a>
-                    <a href="#" data-value="decision_tree" style="--i:4;"><span></span>Decision Trees</a>
-                    <a href="#" data-value="mlp" style="--i:10;"><span></span>MLP (a neural network model)</a>
-                    <a href="#" data-value="knn" style="--i:7;"><span></span>K-Nearest Neighbors (KNN)</a>
-                    <a href="#" data-value="logistic_reg" style="--i:3;"><span></span>Logistic Regression</a>
-                    <a href="#" data-value="ada" style="--i:9;"><span></span>AdaBoost (Adaptive Boosting)</a>
+                    <a href="#" data-value="naive_bayes" style="--i:2;"><span></span>Naive Bayes</a>
+                    <a href="#" data-value="decision_tree" style="--i:3;"><span></span>Decision Trees</a>
+                    <a href="#" data-value="mlp" style="--i:4;"><span></span>MLP (a Neural Network Model)</a>
+                    <a href="#" data-value="knn" style="--i:5;"><span></span>K-Nearest Neighbors (KNN)</a>
+                    <a href="#" data-value="logistic_reg" style="--i:6;"><span></span>Logistic Regression</a>
+                    <a href="#" data-value="ada" style="--i:7;"><span></span>AdaBoost (Adaptive Boosting)</a>
 
                 </div>
             </div>
